🚧 Vacía documentos originales para iniciar nuevos

--- a/doc/v0.0/es/src/404.md
+++ b/doc/v0.0/es/src/404.md
@@ -1,3 +1,3 @@
-# Document not found (404)
+# Documento no encontrado (404)
 
-This URL is invalid, sorry. Try the search instead!
+Esta URL no es válida, lo sentimos. ¡Intenta buscar en su lugar!
